[gd_scene load_steps=10 format=2]

[ext_resource path="res://Textures/MenuBackground.png" type="Texture" id=1]
[ext_resource path="res://Textures/Buttons/gameTitle.png" type="Texture" id=2]
[ext_resource path="res://Textures/Buttons/Play.png" type="Texture" id=3]
[ext_resource path="res://Textures/Buttons/Costumise.png" type="Texture" id=4]
[ext_resource path="res://Textures/Buttons/Settings.png" type="Texture" id=5]
[ext_resource path="res://Textures/Buttons/Play_Hovered.png" type="Texture" id=6]
[ext_resource path="res://Textures/Buttons/Settings_Hovered.png" type="Texture" id=7]
[ext_resource path="res://Textures/Buttons/Costumise_Hovered.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=9]

[node name="menu" type="Node2D"]
script = ExtResource( 9 )

[node name="background" type="Sprite" parent="."]
scale = Vector2( 0.291904, 0.241935 )
texture = ExtResource( 1 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="background"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="background/MarginContainer"]
margin_left = 1004.0
margin_right = 2504.0
margin_bottom = 2480.0
size_flags_horizontal = 4

[node name="Title" type="TextureRect" parent="background/MarginContainer/VBoxContainer"]
margin_right = 1500.0
margin_bottom = 500.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="background/MarginContainer/VBoxContainer"]
margin_top = 504.0
margin_right = 1500.0
margin_bottom = 2012.0

[node name="Play" type="TextureButton" parent="background/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1500.0
margin_bottom = 500.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="background/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 504.0
margin_right = 1500.0
margin_bottom = 1004.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 7 )

[node name="Customise" type="TextureButton" parent="background/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 1008.0
margin_right = 1500.0
margin_bottom = 1508.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 8 )
[connection signal="pressed" from="background/MarginContainer/VBoxContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="background/MarginContainer/VBoxContainer/VBoxContainer/Settings" to="." method="_on_Setting_pressed"]
[connection signal="pressed" from="background/MarginContainer/VBoxContainer/VBoxContainer/Customise" to="." method="_on_Customise_pressed"]
